styles.css
body {
    background: linear-gradient(#c7effb, #385959);
    background-attachment: fixed;
    background-size: cover;
    background-repeat: no-repeat;
    margin: 0;
    min-height: 100vh;
}



/*card*/
.card {
    font-size: 15px;
    background-color: #b385dc;
    border-radius: 20px;
    padding: 0px;
    margin: 30px;
}

.card-body {
    background-color: #b385dc;
    color: #e6d5f5;
    border-radius: 20px;
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
    font-family: "warbler-deck", sans-serif;
    text-align: center;
}

.card-title {
    font-family: "cc-summer-fling-split", sans-serif;
    font-weight: 400;
    font-style: normal;
    font-size: 75px;
    color: #e6d5f5;
    margin: 10px;
    padding: 15px;
    text-decoration: underline;
}

.card-text {
    font-family: "warbler-deck", sans-serif;
    font-style: normal;
    font-size: 30px;
    color: #e6d5f5;
}



/*button*/
#result {
    font-size: 50px;
    color: #e6d5f5;
    margin: 10px;
    text-shadow: 2px 2px 4px black;
}

.generatemermaidnamebutton {
    padding: 5px;
    margin: 10px;
    background-color: #e6d5f5;
    color: #b385dc;
    border: 2px solid #b385dc;
    border-radius: 5px;
    cursor: pointer;
    width: 90%;
    justify-content: center;
    align-items: center;
    display: flex;
    box-sizing: border-box;
    font-family: "farmhand-sans", sans-serif;
    font-weight: 400;
    font-style: bold;
    font-size: 40px;
    width: 100%;
}

.generatemermaidnamebutton:hover {
    background-color: #b385dc;
    color: #e6d5f5;
    border: 2px solid #e6d5f5;
}


/*how happy are u slider*/
.slidecontainer {
    width: 80%;
    margin: 15px auto;
}

.slider {
    -webkit-appearance: none;
    /*takes off automatic styling*/
    width: 100%;
    height: 15px;
    background: #e6d5f5;
    border-radius: 10px;
    outline: none;
    margin-top: 10px;
}

.slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    /*removes default styling */
    width: 25px;
    height: 25px;
    background: #b385dc;
    border-radius: 50%;
    /*circle*/
    cursor: pointer;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
    border: 2px solid #e6d5f5;
    /*outline on dot on slider*/
}

/*radio buttons*/
.radio-group {
    display: flex;
    align-items: center;
    justify-content: center;
}

.radio-item input[type="radio"] {
    width: 20px;
    height: 20px;
    cursor: pointer;
}

.radio-item label {
    font-size: 30px;
    color: #e6d5f5;
    cursor: pointer;
    margin-left: 5px;
}

/*hair color drop down*/
#haircolor {
    font-size: 20px;
    background-color: #e6d5f5;
    color: #b385dc;
    padding: 7px;
    margin-left: 15px;
    border-radius: 8px;
    border: 1px solid #b385dc;
}

/*enter first name box size*/
#nameInput {
    width: 60%;
    padding: 10px;
    font-size: 20px;
    border-radius: 10px;
    background-color: #e6d5f5;
    margin: 5px auto;
    display: block;
    color: #b385dc;
}

